# dsfs

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: c-cpp.yml  cmake.yml
App/: main.cpp
DoxyDoc/html/: _disk_8cpp.html  _disk_8hpp.html  _f_s___extension_8cpp.html  _f_s___extension_8cpp_source.html  _file___system_8cpp.html  _file___system_8hpp.js  _file___system_8hpp_source.html  _shell___lib_8cpp_source.html  _shell___lib_8hpp.html  _shell___lib_8hpp_source.html  annotated_dup.js  class_disk.html  class_s_h_a256-members.html  class_s_h_a256.html  class_shell__lib.html  classfs_1_1_file_system-members.html  classfs_1_1_file_system.js  dir_17ab6708b44b91dcf85556e8fd63ed45.html  dir_17ab6708b44b91dcf85556e8fd63ed45.js  dir_3cb4d2470decde6e071744061a194e3b.html  dir_5695cdca217689a96edd4eef7543ba02.html  dir_6ca15f7762150a27b493f19482730e68.js  dir_7154fd04d202f48d589cc198352091e6.html  dir_78727d444762b915c62e09b23b2db6b7.js  dir_c24c11350ff17e7cb0be57d3f62b721c.js  dir_ea939d9afeb389404eef74d46935eb79.js  doxygen.css  endian_8h.html  functions.html  functions_eval.html  functions_vars.html  globals.html  menu.js  menudata.js  namespacefs.html  namespacefs.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  navtreedata.js  (+7 more)
DoxyDoc/html/search/: all_1.js  all_2.js  all_8.js  all_b.js  all_e.js  all_f.js  classes_2.js  defines_2.js  defines_3.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_a.js  functions_b.js  functions_e.js  variables_0.js  variables_1.js  variables_4.js  variables_8.js
DoxyDoc/man/man3/: Disk.3  Disk.hpp.3  File_System.cpp.3  Shell_Lib.cpp.3  Shell_Lib.hpp.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_drive_lib_include_.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_drive_lib_src_.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_fs_lib_src_.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_shell_lib_.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_shell_lib_src_.3  endian.h.3  fs_FileSystem.3  sha2xx_common.hpp.3
doc/: Disk_orgamization.MD
doc/old/: Block.cpp  Block.hpp  Sector.cpp  VDrive.hpp
docs/html/: _disk_8cpp_source.html  _disk_8hpp.js  _disk_8hpp_source.html  _file___system_8cpp_source.html  _file___system_8hpp.html  _shell___lib_8cpp.html  _shell___lib_8hpp.js  annotated.html  class_disk-members.html  class_disk.js  class_s_h_a256.js  class_shell__lib-members.html  class_shell__lib.js  classes.html  classfs_1_1_file_system.html  dir_3cb4d2470decde6e071744061a194e3b.js  dir_5695cdca217689a96edd4eef7543ba02.js  dir_6ca15f7762150a27b493f19482730e68.html  dir_7154fd04d202f48d589cc198352091e6.js  dir_758336c7b47afe4ed077a605f1230ab2.html  dir_758336c7b47afe4ed077a605f1230ab2.js  dir_78727d444762b915c62e09b23b2db6b7.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_c24c11350ff17e7cb0be57d3f62b721c.html  dir_ea939d9afeb389404eef74d46935eb79.html  dynsections.js  endian_8h_source.html  files.html  files_dup.js  functions_func.html  globals_defs.html  globals_func.html  index.html  namespaces_dup.js  navtree.css  navtree.js  resize.js  sha256_8h.js  sha256_8h_source.html  (+4 more)
docs/html/search/: all_0.js  all_11.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_4.js  files_0.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_c.js  functions_f.js  namespaces_0.js  search.js  searchdata.js  variables_2.js  variables_3.js  variables_5.js
docs/man/man3/: Disk.cpp.3  FS_Extension.cpp.3  File_System.hpp.3  SHA256.3  Shell_lib.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_drive_lib_.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_fs_lib_.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_fs_lib_include_.3  _Users_dmitrymorozov_CLionProjects_dsfs_lib_shell_lib_include_.3  fs.3  sha256.cpp.3  sha256.h.3  sha2xx_context_t.3
img/: Untitled.drawio
lib/: CMakeLists.txt
lib/drive_lib/: CMakeLists.txt
lib/drive_lib/include/: Block.hpp  Disk.hpp  Drive_Lib.hpp  Formatted_Drive.hpp  Sector.hpp  VDrive.hpp
lib/drive_lib/src/: Block.cpp  Disk.cpp  Drive_Lib.cpp  Formatted_Drive.cpp  Sector.cpp  VDrive.cpp
lib/fs_lib/: CMakeLists.txt
lib/fs_lib/include/: File_System.hpp  Fs_Lib.hpp  sha256.h  sha256.hpp  sha2xx_common.hpp
lib/fs_lib/src/: FS_Extension.cpp  File_System.cpp  Fs_Lib.cpp  sha256.cpp
lib/shell_lib/: CMakeLists.txt
lib/shell_lib/include/: Shell_Lib.hpp
lib/shell_lib/src/: Shell_Lib.cpp
tests/: CMakeLists.txt  shell_test.cpp
tests/src/: disk_test.cpp  fs_test.cpp
